--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@ckeditor/ckeditor5-react": "^7.0.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.2",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -30,12 +33,14 @@
     "sonner": "^1.4.41",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
