--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
 
-NEXT_PUBLIC_URL ='https://donate-server-2-git-main-alexroger654s-projects.vercel.app/api/v1/'
+# NEXT_PUBLIC_URL ='https://donate-server-2-git-main-alexroger654s-projects.vercel.app/api/v1/'
+NEXT_PUBLIC_URL ='http://localhost:5000/api/v1/'
 
