--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
       "@/*": ["./src/*"]
     }
   },
+  "typeRoots": ["./node_modules/@types", "./types"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  
+  "exclude": ["node_modules", "src/app/api/auth"]
 }
