--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ckeditor/ckeditor5-react": "^7.0.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
-    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -25,8 +25,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
+    "lucide-react": "^0.475.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
